<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C">


    <TextView
        android:id="@+id/orange_circle"
        android:layout_width="171dp"
        android:layout_height="165dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="-86dp"
        android:layout_marginRight="-86dp"
        android:background="@drawable/orange_circle" />

    <TextView
        android:id="@+id/blue_circle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/blue_circle" />

    <TextView
        android:id="@+id/purple_circle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="248dp"
        android:layout_marginLeft="248dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/dark_blue_circle" />

    <TextView
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:text="@string/FAMCH"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/downText"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:text="@string/downText"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/whiteBox"
        android:layout_width="match_parent"
        android:layout_height="481dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp"
        android:background="@drawable/white_round_box" />

    <TextView
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:textColorHint="#656565"
        android:textColor="@color/black"
        android:background="@drawable/round_input"
        android:ems="10"
        android:hint="@string/name"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:paddingVertical="10dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_below="@+id/nameField"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:textColorHint="#656565"
        android:textColor="@color/black"
        android:background="@drawable/round_input"
        android:ems="10"
        android:autofillHints="Phone"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingVertical="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_below="@+id/phoneField"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:textColorHint="#656565"
        android:textColor="@color/black"
        android:background="@drawable/round_input"
        android:ems="10"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingRight="15dp"/>

    <EditText
        android:id="@+id/passField"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_below="@+id/emailField"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:textColorHint="#656565"
        android:textColor="@color/black"
        android:background="@drawable/round_input"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingVertical="10dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingRight="15dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passField"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="@drawable/btn_round"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:backgroundTint="@color/black" />

</RelativeLayout>